Fixed source.html line spacing

--- a/static/pages.css
+++ b/static/pages.css
@@ -145,5 +145,5 @@ footer div {
 
 #src {
     margin: 1em;
-    line-spacing: 20px;
+    line-height: 20px;
 }
